src/main/kotlin/com/example/error/ParameterNotFoundException.kt
package com.example.error


class ParameterNotFoundException(msg: String) : Exception(msg) {
    constructor() : this("Parameter missing!")
}
